hpa-rps/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8080
    targetPort: 8080
